welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:4: error: reassignment to val
    case (i, j, true) if ((i == j) & (i != 6)) => return i = i + 1
                                                           ^withoutDoubles:5: error: reassignment to val
    case (i, j, true) if ((i == j) & (i == 6)) => return i = 1
                                                           ^