welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.code
def withoutDoubles(die1:Int, die2:Int, noDoubles:Boolean):Int = {
  
  (die1, die2, noDoubles) match {
    case (i, j, true) if ((i == j) & (i != 6)) => return i = i + 1
    case (i, j, true) if ((i == j) & (i == 6)) => return i = 1
    case (_, _, _) => return die1 + die2
  }
}